--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dashboard_nuxt",
   "version": "1.0.0",
-  "private": false,
+  "private": true,
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
